; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libiosuhax/extr_iosuhax_disc_interface.c_IOSUHAX_usb_shutdown.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libiosuhax/extr_iosuhax_disc_interface.c_IOSUHAX_usb_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fsaFdUsb = common dso_local global i32 0, align 4
@usbFd = common dso_local global i32 0, align 4
@FSA_REF_USB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @IOSUHAX_usb_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @IOSUHAX_usb_shutdown() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @IOSUHAX_usb_isInserted()
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %11

5:                                                ; preds = %0
  %6 = load i32, i32* @fsaFdUsb, align 4
  %7 = load i32, i32* @usbFd, align 4
  %8 = call i32 @IOSUHAX_FSA_RawClose(i32 %6, i32 %7)
  %9 = load i32, i32* @FSA_REF_USB, align 4
  %10 = call i32 @IOSUHAX_disc_io_fsa_close(i32 %9)
  store i32 -1, i32* @usbFd, align 4
  store i32 1, i32* %1, align 4
  br label %11

11:                                               ; preds = %5, %4
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @IOSUHAX_usb_isInserted(...) #1

declare dso_local i32 @IOSUHAX_FSA_RawClose(i32, i32) #1

declare dso_local i32 @IOSUHAX_disc_io_fsa_close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
